Hide dismissibles via opacity very briefly to prevent flicker

--- a/source/patterns/components/dismissible/dismissible.scss
+++ b/source/patterns/components/dismissible/dismissible.scss
@@ -1,7 +1,20 @@
 @import './source/global/global';
 
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  99% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .cu-dismissible {
   position: relative;
+  animation: fadeIn .2s;
 
   &__close {
     position: absolute;
